# TinyLisp-T4

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp
src/: calculator.cpp  calculator.h
src/Funciones/: funciones.cpp  funciones.h
src/Guia/: guia.cpp  guia.h
src/LoadScript/: loadscript.cpp  loadscript.h
src/Menu/: menu.cpp  menu.h
src/Operaciones/: evaluator.cpp  evaluator.h
src/Tokenizer/: tokenizer.cpp  tokenizer.h
src/Variant/: variant.cpp  variant.h
